src/test/resources/Fall_21_Test_Cases/Good/LO-0/lvl0-good-difficult-ij.lo
//good case
//check ternary operator
int a, b, c;
{
a = 5;
b = 3;
c = ((a>b)?1:0);
}
