src/test/resources/Fall_21_Test_Cases/Bad/LO-1/lvl1-bad-easy-ij.lo
//bad case
//missing paranthesis
int a;
{
a = 5;
if((a > 1)){


}
